Fixed footer overlapping

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,16 +13,21 @@ code {
     monospace;
 }
 
+#wrapper{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#wrapper,main{
+  flex-grow: 1;
+}
+
 main{
   display: flex;
-  flex: 1;
-  min-height: 80vh;
   padding: 16px;
 }
 
 footer{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-
+  flex-basis: 50px;
 }
